--- a/templates/home-assistant/secrets.yaml.j2
+++ b/templates/home-assistant/secrets.yaml.j2
@@ -1,4 +1,7 @@
-
+---
 # Use this file to store secrets like usernames and passwords.
 # Learn more at https://www.home-assistant.io/docs/configuration/secrets/
+{% if home_assistant_secrets | count > 0 %}
+{{ home_assistant_secrets | to_nice_yaml(indent=0, sort_keys=False) | indent(width=0, first=False, blank=False) }}
+{% endif %}
 some_password: welcome
